--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,26 +60,12 @@ logger.application=DEBUG
 
 logger.app=DEBUG
 
-# Application deplyment
-# application.context=/cloudtimr/
 
-smtp.host=localhost
-smtp.port=25
-#smtp.ssl (defaults to no)
-#smtp.tls (defaults to no)
-#smtp.user (optional)
-#smtp.password (optional)
 
 akka.default-dispatcher.fork-join-executor.pool-size-max=64
 akka.actor.debug.receive = on
 
-oauth2.provider {
-  facebook {
-    clientId=166091033581448
-    clientSecret=8a3dfcee20fd30093b4fcf34aa3b17a7
-  }
-  google {
-    clientId=461220447949.apps.googleusercontent.com
-    clientSecret=qJWpAqAncYTNttHPZT3VgPTg
-  }
-}
+
+
+include "securesocial.conf"
+
