initial editable about me

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -33,20 +33,20 @@ securesocial {
 		consumerSecret="rSoGR3O4YhaMiT821aWKWsq5RdhSlXaYT30I7oFWo"
 	}
 
-    github {
-        authorizationUrl="https://github.com/login/oauth/authorize"
-        accessTokenUrl="https://github.com/login/oauth/access_token"
-        clientId="cc1041161512ab0f5d5b"
-        clientSecret="2e428edb1ed5abd3b0e7c08d4e8ac4e639cd6b5f"
-    }
+    #github {
+        #authorizationUrl="https://github.com/login/oauth/authorize"
+        #accessTokenUrl="https://github.com/login/oauth/access_token"
+        #clientId="cc1041161512ab0f5d5b"
+        #clientSecret="2e428edb1ed5abd3b0e7c08d4e8ac4e639cd6b5f"
+    #}
 
-    google {
-        authorizationUrl="https://accounts.google.com/o/oauth2/auth"
-        accessTokenUrl="https://accounts.google.com/o/oauth2/token"
-        clientId="459927666173.apps.googleusercontent.com"
-        clientSecret="459927666173@developer.gserviceaccount.com"
-        scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
-    }
+    #google {
+        #authorizationUrl="https://accounts.google.com/o/oauth2/auth"
+        #accessTokenUrl="https://accounts.google.com/o/oauth2/token"
+        #clientId="459927666173.apps.googleusercontent.com"
+        #clientSecret="459927666173@developer.gserviceaccount.com"
+        #scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
+    #}
 
 
 }
