--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,6 +5,8 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
+# note: the application secret is on github for convenience,
+# but in actual applications it should be kept, y'know, secret
 application.secret="l];ra_ebB@3@d<04t;T?U4Tr/L4e@3jgyUDOnPSZ9ZER7GWwJCt^oEi?6Bn?_/yR"
 
 # The application languages
